# veil-public

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Caddyfile  Dockerfile  LICENSE  README.md  SECURITY.md  TRADEMARK.md  alembic.ini  docker-compose.dev.yml  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  docker-publish.yml  release.yml
alembic/: env.py
alembic/versions/: dc01bac4eb77_initial_schema.py  f565d504bb23_add_documents_table.py
backend/: config.py  main.py
backend/api/: admin.py  api_keys.py  auth.py  chat.py  conversations.py  documents.py  gateway.py  licensing.py  models.py  policies.py  rules.py  sanitize.py  settings.py  usage.py  webhooks.py
backend/core/: audit.py  crypto.py  document.py  events.py  logging.py  mapper.py  normalizer.py  policy_engine.py  provider_keys.py  rehydrator.py  sanitizer.py  state_store.py  url_validator.py  usage.py
backend/db/: seed.py  session.py
backend/detectors/: base.py  custom_rule_detector.py  fqdn_detector.py  presidio_detector.py  regex_detector.py  registry.py
backend/licensing/: __init__.py  cli.py  dependencies.py  tiers.py  validator.py
backend/middleware/: rate_limit.py
backend/models/: __init__.py  api_key.py  audit.py  base.py  conversation.py  document.py  entity.py  organization.py  policy.py  rule.py  usage.py  user.py  webhook.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts
keys/: public_key.pem
(+60 files in other folders)
